# pdf-modifier-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json  server.json  smithery.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/templates/: CHANGELOG.md.j2
.github/workflows/: add-to-project.yml  ci.yml  docker-build.yml  mutation.yml  pages.yml  release.yml  security.yml
.well-known/mcp/: server-card.json
backend/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.json
backend/docs/: lessons.md
backend/docs/adr/: adr-003-pdf-storage.md  adr-008-testing-strategy.md  adr-010-vision-pipeline.md  adr-011-semantic-search.md  adr-012-audio-pipeline.md
backend/specs/AI-001-detection/: tasks.md
backend/specs/AUD-001-audio/: tasks.md  verification.md
backend/specs/FONT-001-custom-fonts/: proposal.md  tasks.md  verification.md
backend/specs/VIS-001-vision/: tasks.md
backend/specs/WEB-001-web-ui/: tasks.md
backend/src/pdf_modifier/: __main__.py
backend/src/pdf_modifier/ai/: exceptions.py  models.py  router.py  vision.py  vision_service.py
backend/src/pdf_modifier/web/: __init__.py  app.py  config.py  deps.py  storage.py
backend/tests/integration/: test_custom_fonts.py
backend/tests/unit/ai/: test_client.py  test_models.py  test_prompts.py  test_vision.py  test_vision_service.py
docs/: README.md  ROADMAP.md  TESTING.md  audit-pre-implementation.md  lessons.md
docs/adr/: adr-001-web-architecture.md  adr-002-ai-layer.md  adr-004-session-management.md  adr-005-async-strategy.md  adr-006-deployment.md  adr-007-security.md  adr-008-testing-strategy.md  adr-009-frontend.md
frontend/: .gitignore  Dockerfile.frontend  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/routes/: +page.svelte
infra/: .gitignore  compose.base.yml  compose.dev.yml  compose.prod.yml  nginx.conf
scripts/: safe-gh-pr
site/: astro.config.mjs  package-lock.json  package.json
site/src/styles/: custom.css
specs/: README.md
specs/AI-001-detection/: proposal.md  tasks.md  verification.md
specs/AUD-001-audio/: proposal.md  tasks.md
specs/FONT-001-custom-fonts/: tasks.md  verification.md
specs/INFRA-001-docker/: proposal.md  tasks.md  verification.md
specs/ML-001-multilingual/: proposal.md  tasks.md  verification.md
specs/VIS-001-vision/: proposal.md  tasks.md  verification.md
specs/WEB-001-web-ui/: proposal.md  tasks.md  verification.md
src/pdf_modifier/core/: modifier.py
src/pdf_modifier/interfaces/: cli.py  mcp.py
src/pdf_modifier/web/: app.py
src/pdf_modifier_mcp/: __init__.py  __main__.py  logger.py
src/pdf_modifier_mcp/ai/: __init__.py  client.py  exceptions.py  throttle.py
src/pdf_modifier_mcp/core/: __init__.py  analyzer.py  exceptions.py  font_resolver.py  models.py  modifier.py
src/pdf_modifier_mcp/interfaces/: __init__.py  cli.py  mcp.py
src/pdf_modifier_mcp/web/: config.py  deps.py  session.py  storage.py
tasks/: todo.md
tests/: conftest.py  test_integration.py  test_interfaces.py  test_unit.py
tests/integration/: test_custom_fonts.py  test_integration.py
tests/unit/ai/: __init__.py  test_client.py  test_models.py  test_prompts.py  test_router.py  test_throttle.py
tests/unit/core/: test_analyzer.py  test_analyzer_embedded_fonts.py  test_batch.py  test_exceptions.py  test_file_size_validation.py  test_font_models.py  test_font_resolver.py  test_hyperlinks.py  test_modifier.py  test_modifier_custom_fonts.py  test_page_range.py
tests/unit/interfaces/: test_cli.py  test_cli_custom_fonts.py  test_file_size_validation.py  test_mcp.py  test_mcp_embedded_fonts.py
tests/unit/web/: __init__.py  test_routes.py  test_session.py  test_storage.py
(+33 files in other folders)
