[project]
name = "pdf-modifier-mcp"
version = "1.2.0"
description = "PDF modification tool with CLI and MCP interfaces for AI agents."
authors = [{name = "Manu", email = "mlorentedev@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["pdf", "mcp", "claude", "ai", "modification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pymupdf>=1.26.7",
    "typer[all]>=0.9.0",
    "fastmcp>=0.4.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
pdf-mod = "pdf_modifier_mcp.interfaces.cli:main"
pdf-modifier-mcp = "pdf_modifier_mcp.interfaces.mcp:main"

[project.urls]
Homepage = "https://github.com/mlorentedev/pdf-modifier-mcp"
Repository = "https://github.com/mlorentedev/pdf-modifier-mcp"
Documentation = "https://mlorentedev.github.io/pdf-modifier-mcp/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_modifier_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["fitz", "fastmcp.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["pdf_modifier_mcp"]
